Resolved widget area sub-menu z-index

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -665,7 +665,7 @@
 					display: none;
 					position: absolute;
 					margin: 0;
-					z-index: 120;
+					z-index: 10000;
 
 					border: 1px solid #e6e6e6;
 
@@ -674,8 +674,7 @@
 					top: 2.5em;
 					left: -10px;
 					background: white;
-
-
+			
 					li {
 						position: relative;
 						list-style: none;
