--- a/style.css
+++ b/style.css
@@ -3010,7 +3010,7 @@ html[xmlns] .slides {
   display: none;
   position: absolute;
   margin: 0;
-  z-index: 120;
+  z-index: 10000;
   border: 1px solid #e6e6e6;
   -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
   -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
